@@ -141,6 +141,7 @@
 	box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),  inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
 .throw {
+    font-size:12px;
 	margin-left: 10px;
 	height: 30px;
 	width : 100px;
@@ -148,7 +149,7 @@
 	line-height: 2.5;
 	padding: 0px 0px;
 	text-align: center;
- 	vertical-align: middle;
+ 	vertical-align: top;
 	font-size: 16px;
 	color: #fff;
 	text-shadow: 1px 1px 1px #000;
