@@ -44,7 +44,11 @@
                 <br><br>
 
 
-                <label>Photo :</label>
+                <label>Photo :</label><span class="astuce">
+                Astuce : Prenez en photo le code barre !
+            </span>
+                <label> </label>
+                <br><br>
 
                 <img src="{{ url_for('static', filename='img/upload.svg') }}">
 
